--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,11 +43,23 @@ body {
 			font-size: 2em;
 			color: $blue;
 			font-family: $cera-round-900;
+			@media (max-width: 768px) {
+				text-align: center;
+			}
+			@media (max-width: 480px) {
+				font-size: 1.5em;
+			}
 		}
 		p {
 			padding: 0;
 			font-size: 1em;
 			color: $blue;
+			@media (max-width: 768px) {
+				text-align: center;
+			}
+			@media (max-width: 480px) {
+				font-size: .875em;
+			}
 		}
 	}
 	.input-tracking {
@@ -55,7 +67,16 @@ body {
 		justify-content: center;
 		align-items: flex-end;
 		padding: 1.5em 0 0;
+		@media (max-width: 768px) {
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			padding: 1em 0 0;
+		}
 		&__txt {
+			@media (max-width: 480px) {
+				width: 100%;
+			}
 			label {
 				display: block;
 				margin: 0 0 .15em;
@@ -71,8 +92,12 @@ body {
 				border: 1px solid $red;
 				border-radius: 8px;
 				transition: .3s;
+				appearance: none;
 				@include placeholder {
 					color: #999999;
+				}
+				@media (max-width: 480px) {
+					width: 100%;
 				}
 				&:focus {
 					box-shadow: 0 0 0 5px rgba(204,59,48,.2);
@@ -92,6 +117,10 @@ body {
 			font-family: $cera-round-700;
 			text-transform: uppercase;
 			transition: .3s;
+			@media (max-width: 768px) {
+				margin-top: .5em;
+				margin-left: 0;
+			}
 			&:hover {
 				background-color: $blue;
 				border-color: $blue;
@@ -108,15 +137,37 @@ body {
 		visibility: hidden;
 		top: -50px;
 		transition: .5s;
+		@media (max-width: 768px) {
+			padding: 1.5em 0 0;
+		}
 		&__list {
 			display: flex;
 			justify-content: center;
+			@media (max-width: 991px) {
+				flex-direction: column;
+			}
 			ul {
 				display: flex;
 				align-items: center;
 				padding: 0 1.5em;
+				@media (max-width: 1199px) {
+					padding: 0 1em;
+				}
+				@media (max-width: 991px) {
+					padding: .5em 0 0;
+				}
+				@media (max-width: 480px) {
+					flex-direction: column;
+					align-items: flex-start;
+				}
 				li {
 					color: $blue;
+					@media (max-width: 1199px) {
+						font-size: .875em;
+					}
+					@media (max-width: 768px) {
+						font-size: 1em;
+					}
 					&:first-child {
 						padding-right: .5em;
 						font-family: $cera-round-700;
@@ -140,9 +191,17 @@ body {
 			display: flex;
 			justify-content: center;
 			padding: 2.5em 0 0;
+			@media (max-width: 768px) {
+				flex-direction: column;
+			}
 			.status-col {
 				position: relative;
 				padding: 0 5em;
+				@media (max-width: 768px) {
+					display: flex;
+					align-items: center;
+					padding: 0 0 3em;
+				}
 				&__circle {
 					position: relative;
 					display: flex;
@@ -166,6 +225,10 @@ body {
 					color: #999999;
 					text-align: center;
 					font-family: $cera-round-700;
+					@media (max-width: 768px) {
+						text-align: left;
+						margin-left: 1em;
+					}
 				}
 				&--canceled, &--first, &--second, &--first-store {
 					.status-col {
@@ -178,6 +241,14 @@ body {
 								background-color: #F2F2F2;
 								right: -170px;
 								@include center-y;
+								@media (max-width: 768px) {
+									width: 8px;
+									height: 100px;
+									right: 0;
+									left: 45%;
+									top: auto;
+									bottom: -75px;
+								}
 							}
 						}
 					}
