--- a/scss/style.scss
+++ b/scss/style.scss
@@ -230,7 +230,7 @@ body {
 						margin-left: 1em;
 					}
 				}
-				&--canceled, &--first, &--second, &--first-store {
+				&--canceled, &--first, &--second, &--first-store, &--second-store {
 					.status-col {
 						&__circle {
 							&:after {
@@ -269,6 +269,19 @@ body {
 						}
 					}
 				}
+				&--return {
+					display: none;
+					.status-col {
+						&__circle {
+							background-color: $return;
+							box-shadow: 0 0 25px rgba(102,58,182,.8);
+							i {
+								font-size: 3.5em;
+								color: white;
+							}
+						}
+					}
+				}
 			}
 		}
 		&.store {
@@ -283,7 +296,7 @@ body {
 			visibility: visible;
 			top: 0;
 			.status-col {
-				&--first-store, &--second-store {
+				&--first-store, &--second-store, &--third-store {
 					display: none;
 				}
 			}
@@ -446,6 +459,90 @@ body {
 						opacity: 1;
 						color: $delivered;
 					}
+				}
+			}
+		}
+		&.delivered-ok {
+			.status-info {
+				color: $delivered;
+			}
+			.status-col {
+				&--first, &--first-store {
+					.status-col {
+						&__circle {
+							background-color: $preparing;
+							box-shadow: 0 0 25px rgba(250,175,87,.8);
+							i {
+								color: white;
+							}
+							&:after {
+								background-color: $preparing;
+							}
+						}
+					}
+					h3 {
+						opacity: 1;
+						color: $preparing;
+					}
+				}
+				&--second, &--second-store {
+					.status-col {
+						&__circle {
+							background-color: $sent;
+							box-shadow: 0 0 25px rgba(99,166,245,.8);
+							i {
+								color: white;
+							}
+							&:after {
+								background-color: $sent;
+							}
+						}
+					}
+					h3 {
+						opacity: 1;
+						color: $sent;
+					}
+				}
+				&--third, &--third-store {
+					.status-col {
+						&__circle {
+							background-color: $delivered;
+							box-shadow: 0 0 25px rgba(84,203,135,.8);
+							i {
+								color: white;
+							}
+						}
+					}
+					h3 {
+						opacity: 1;
+						color: $delivered;
+					}
+				}
+			}
+		}
+		&.return {
+			.status-info {
+				color: $return;
+			}
+			.status-col {
+				&--return {
+					display: block;
+					h3 {
+						opacity: 1;
+						color: $return;
+					}
+				}
+				&--second, &--second-store {
+					.status-col {
+						&__circle {
+							&:after {
+								background-color: $return;
+							}
+						}
+					}
+				}
+				&--third, &--third-store {
+					display: none;
 				}
 			}
 		}
