Se agrego paso de pago aceptado

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,6 +9,7 @@ $cera-round-200: 'cera_round_thin';
 //COLOR
 $blue: #243366;
 $red: #CC3B30;
+$paid: #F06531;
 $processing: #F06531;
 $preparing: #FAAF57;
 $sent: #63A6F5;
